Closes #1433 Fix alignment and label issues with Quickstart Select Menu (#1434)

--- a/modules/custom/az_select_menu/css/az-select-menu.css
+++ b/modules/custom/az_select_menu/css/az-select-menu.css
@@ -9,7 +9,7 @@ select.select-primary {
     background-repeat: no-repeat;
     background-position: 95% 50%;
     background-position: calc(100% - 10px)  50%;
-    border-top: 1px solid transparent;
+    border-top: 0;
     border-right: 0;
     border-bottom: 3px solid #cbd1e0;
     border-left: 0;
@@ -26,7 +26,7 @@ select.select-primary {
     -webkit-transition: .15s all ease-in-out;
     transition: .15s all ease-in-out;
     text-overflow: '';
-    height: calc(1.6em + 0.75rem + 2px);
+    height: unset;
   }
   
   /*This only works in Internet Explorer 10 and beyond. */
@@ -36,8 +36,7 @@ select.select-primary {
 
   select.select-primary:focus,
   select.select-primary:hover {
-    border-top: 1px solid transparent;
-    border-bottom: 3px solid var(--red);
+    border-bottom-color: var(--red);
   }
 
   label.select-menu-label {
@@ -45,7 +44,7 @@ select.select-primary {
   }
 
   .input-group .select-menu-label {
-    margin: 0.7em 0.7em 0;
+    margin: 0.4375em 0.7em 0;
   }
   
   select.select-primary:active,
